check_PROGRAMS = \
                       test_Epic_lib.cpp \
                      test_Singleton.cpp \
                 test_cmdline_Parser.cpp \
                  test_config_Global.cpp \
                  test_config_Reader.cpp \
                test_config_Resource.cpp \
                    test_config_Util.cpp \
          test_conversion_Conversion.cpp \
                     test_dao_Cereal.cpp \
                       test_dao_Food.cpp \
               test_dao_FoodNutrient.cpp \
                  test_dao_Frequency.cpp \
                       test_dao_Meal.cpp \
                   test_dao_MealFood.cpp \
               test_dao_MealNutrient.cpp \
                       test_dao_Milk.cpp \
                   test_dao_Nutrient.cpp \
                     test_dao_Person.cpp \
                    test_dao_Portion.cpp \
               test_dao_Questionaire.cpp \
                     test_dao_Report.cpp \
                     test_dao_Weight.cpp \
                test_dataset_Dataset.cpp \
                 test_import_Context.cpp \
                  test_import_Import.cpp \
             test_import_InsertValue.cpp \
                test_import_LineInfo.cpp \
                 test_import_NewLine.cpp \
                  test_import_Parser.cpp \
            test_license_GPL_License.cpp \
              test_pattern_TwoKeyMap.cpp

TESTS=${check_PROGRAMS}
